move bmo_connect_nonplanar.c

--- a/source/blender/bmesh/CMakeLists.txt
+++ b/source/blender/bmesh/CMakeLists.txt
@@ -20,7 +20,7 @@ set(SRC
   operators/bmo_bridge.cc
   operators/bmo_connect.c
   operators/bmo_connect_concave.cc
-  operators/bmo_connect_nonplanar.c
+  operators/bmo_connect_nonplanar.cc
   operators/bmo_connect_pair.c
   operators/bmo_create.c
   operators/bmo_dissolve.c
