--- a/source/blender/bmesh/CMakeLists.txt
+++ b/source/blender/bmesh/CMakeLists.txt
@@ -21,7 +21,7 @@ set(SRC
   operators/bmo_connect.c
   operators/bmo_connect_concave.cc
   operators/bmo_connect_nonplanar.cc
-  operators/bmo_connect_pair.c
+  operators/bmo_connect_pair.cc
   operators/bmo_create.c
   operators/bmo_dissolve.c
   operators/bmo_dupe.c
