--- a/source/blender/bmesh/CMakeLists.txt
+++ b/source/blender/bmesh/CMakeLists.txt
@@ -23,7 +23,7 @@ set(SRC
   operators/bmo_connect_nonplanar.cc
   operators/bmo_connect_pair.cc
   operators/bmo_create.cc
-  operators/bmo_dissolve.c
+  operators/bmo_dissolve.cc
   operators/bmo_dupe.c
   operators/bmo_edgenet.c
   operators/bmo_extrude.c
