--- a/source/blender/bmesh/CMakeLists.txt
+++ b/source/blender/bmesh/CMakeLists.txt
@@ -28,7 +28,7 @@ set(SRC
   operators/bmo_edgenet.cc
   operators/bmo_extrude.cc
   operators/bmo_fill_attribute.cc
-  operators/bmo_fill_edgeloop.c
+  operators/bmo_fill_edgeloop.cc
   operators/bmo_fill_grid.c
   operators/bmo_fill_holes.c
   operators/bmo_hull.c
