--- a/source/blender/bmesh/CMakeLists.txt
+++ b/source/blender/bmesh/CMakeLists.txt
@@ -31,7 +31,7 @@ set(SRC
   operators/bmo_fill_edgeloop.cc
   operators/bmo_fill_grid.cc
   operators/bmo_fill_holes.cc
-  operators/bmo_hull.c
+  operators/bmo_hull.cc
   operators/bmo_inset.c
   operators/bmo_join_triangles.c
   operators/bmo_mesh_convert.c
