--- a/source/blender/bmesh/CMakeLists.txt
+++ b/source/blender/bmesh/CMakeLists.txt
@@ -33,7 +33,7 @@ set(SRC
   operators/bmo_fill_holes.cc
   operators/bmo_hull.cc
   operators/bmo_inset.cc
-  operators/bmo_join_triangles.c
+  operators/bmo_join_triangles.cc
   operators/bmo_mesh_convert.c
   operators/bmo_mirror.c
   operators/bmo_normals.c
