move bmo_mirror.c

--- a/source/blender/bmesh/CMakeLists.txt
+++ b/source/blender/bmesh/CMakeLists.txt
@@ -35,7 +35,7 @@ set(SRC
   operators/bmo_inset.cc
   operators/bmo_join_triangles.cc
   operators/bmo_mesh_convert.cc
-  operators/bmo_mirror.c
+  operators/bmo_mirror.cc
   operators/bmo_normals.c
   operators/bmo_offset_edgeloops.c
   operators/bmo_planar_faces.c
