--- a/source/blender/bmesh/CMakeLists.txt
+++ b/source/blender/bmesh/CMakeLists.txt
@@ -41,7 +41,7 @@ set(SRC
   operators/bmo_planar_faces.cc
   operators/bmo_poke.cc
   operators/bmo_primitive.cc
-  operators/bmo_removedoubles.c
+  operators/bmo_removedoubles.cc
   operators/bmo_rotate_edges.c
   operators/bmo_smooth_laplacian.c
   operators/bmo_split_edges.c
