--- a/source/blender/bmesh/CMakeLists.txt
+++ b/source/blender/bmesh/CMakeLists.txt
@@ -61,7 +61,7 @@ set(SRC
   intern/bmesh_callback_generic.h
   intern/bmesh_construct.cc
   intern/bmesh_construct.h
-  intern/bmesh_core.c
+  intern/bmesh_core.cc
   intern/bmesh_core.h
   intern/bmesh_delete.c
   intern/bmesh_delete.h
