--- a/source/blender/bmesh/CMakeLists.txt
+++ b/source/blender/bmesh/CMakeLists.txt
@@ -73,7 +73,7 @@ set(SRC
   intern/bmesh_iterators.cc
   intern/bmesh_iterators.h
   intern/bmesh_iterators_inline.h
-  intern/bmesh_log.c
+  intern/bmesh_log.cc
   intern/bmesh_log.h
   intern/bmesh_marking.c
   intern/bmesh_marking.h
