--- a/source/blender/bmesh/CMakeLists.txt
+++ b/source/blender/bmesh/CMakeLists.txt
@@ -91,7 +91,7 @@ set(SRC
   intern/bmesh_mesh_partial_update.h
   intern/bmesh_mesh_tessellate.cc
   intern/bmesh_mesh_tessellate.h
-  intern/bmesh_mesh_validate.c
+  intern/bmesh_mesh_validate.cc
   intern/bmesh_mesh_validate.h
   intern/bmesh_mods.c
   intern/bmesh_mods.h
