move bmesh_opdefines.c

--- a/source/blender/bmesh/CMakeLists.txt
+++ b/source/blender/bmesh/CMakeLists.txt
@@ -95,7 +95,7 @@ set(SRC
   intern/bmesh_mesh_validate.h
   intern/bmesh_mods.cc
   intern/bmesh_mods.h
-  intern/bmesh_opdefines.c
+  intern/bmesh_opdefines.cc
   intern/bmesh_operator_api_inline.h
   intern/bmesh_operators.c
   intern/bmesh_operators.h
