move bmesh_beautify.c

--- a/source/blender/bmesh/CMakeLists.txt
+++ b/source/blender/bmesh/CMakeLists.txt
@@ -121,7 +121,7 @@ set(SRC
   intern/bmesh_error.h
   intern/bmesh_operator_api.h
 
-  tools/bmesh_beautify.c
+  tools/bmesh_beautify.cc
   tools/bmesh_beautify.h
   tools/bmesh_bevel.c
   tools/bmesh_bevel.h
