--- a/source/blender/bmesh/CMakeLists.txt
+++ b/source/blender/bmesh/CMakeLists.txt
@@ -131,7 +131,7 @@ set(SRC
   tools/bmesh_boolean.h
   tools/bmesh_decimate.h
   tools/bmesh_decimate_collapse.cc
-  tools/bmesh_decimate_dissolve.c
+  tools/bmesh_decimate_dissolve.cc
   tools/bmesh_decimate_unsubdivide.c
   tools/bmesh_edgenet.c
   tools/bmesh_edgenet.h
