--- a/source/blender/bmesh/CMakeLists.txt
+++ b/source/blender/bmesh/CMakeLists.txt
@@ -133,7 +133,7 @@ set(SRC
   tools/bmesh_decimate_collapse.cc
   tools/bmesh_decimate_dissolve.cc
   tools/bmesh_decimate_unsubdivide.cc
-  tools/bmesh_edgenet.c
+  tools/bmesh_edgenet.cc
   tools/bmesh_edgenet.h
   tools/bmesh_edgesplit.c
   tools/bmesh_edgesplit.h
