move bmesh_edgesplit.c

--- a/source/blender/bmesh/CMakeLists.txt
+++ b/source/blender/bmesh/CMakeLists.txt
@@ -135,7 +135,7 @@ set(SRC
   tools/bmesh_decimate_unsubdivide.cc
   tools/bmesh_edgenet.cc
   tools/bmesh_edgenet.h
-  tools/bmesh_edgesplit.c
+  tools/bmesh_edgesplit.cc
   tools/bmesh_edgesplit.h
   tools/bmesh_intersect.c
   tools/bmesh_intersect.h
