--- a/source/blender/bmesh/CMakeLists.txt
+++ b/source/blender/bmesh/CMakeLists.txt
@@ -139,7 +139,7 @@ set(SRC
   tools/bmesh_edgesplit.h
   tools/bmesh_intersect.c
   tools/bmesh_intersect.h
-  tools/bmesh_intersect_edges.c
+  tools/bmesh_intersect_edges.cc
   tools/bmesh_intersect_edges.h
   tools/bmesh_path.c
   tools/bmesh_path.h
