--- a/source/blender/bmesh/CMakeLists.txt
+++ b/source/blender/bmesh/CMakeLists.txt
@@ -145,7 +145,7 @@ set(SRC
   tools/bmesh_path.h
   tools/bmesh_path_region.c
   tools/bmesh_path_region.h
-  tools/bmesh_path_region_uv.c
+  tools/bmesh_path_region_uv.cc
   tools/bmesh_path_region_uv.h
   tools/bmesh_path_uv.c
   tools/bmesh_path_uv.h
