--- a/source/blender/bmesh/CMakeLists.txt
+++ b/source/blender/bmesh/CMakeLists.txt
@@ -141,7 +141,7 @@ set(SRC
   tools/bmesh_intersect.h
   tools/bmesh_intersect_edges.cc
   tools/bmesh_intersect_edges.h
-  tools/bmesh_path.c
+  tools/bmesh_path.cc
   tools/bmesh_path.h
   tools/bmesh_path_region.cc
   tools/bmesh_path_region.h
