move bmesh_triangulate.c

--- a/source/blender/bmesh/CMakeLists.txt
+++ b/source/blender/bmesh/CMakeLists.txt
@@ -153,7 +153,7 @@ set(SRC
   tools/bmesh_region_match.h
   tools/bmesh_separate.cc
   tools/bmesh_separate.h
-  tools/bmesh_triangulate.c
+  tools/bmesh_triangulate.cc
   tools/bmesh_triangulate.h
   tools/bmesh_wireframe.c
   tools/bmesh_wireframe.h
