--- a/source/blender/bmesh/CMakeLists.txt
+++ b/source/blender/bmesh/CMakeLists.txt
@@ -17,7 +17,7 @@ set(INC_SYS
 )
 
 set(SRC
-  # Naming convention for BMesh operators is: bmo_*action*_*details*.c
+  # Naming convention for BMesh operators is: bmo_*action*_*details*.cc
   operators/bmo_beautify.cc
   operators/bmo_bevel.cc
   operators/bmo_bisect_plane.cc
