move MOD_gpencil_legacy_armature.c

--- a/source/blender/gpencil_modifiers_legacy/CMakeLists.txt
+++ b/source/blender/gpencil_modifiers_legacy/CMakeLists.txt
@@ -27,7 +27,7 @@ set(INC_SYS
 set(SRC
   intern/MOD_gpencil_legacy_ui_common.c
 
-  intern/MOD_gpencil_legacy_armature.c
+  intern/MOD_gpencil_legacy_armature.cc
   intern/MOD_gpencil_legacy_array.c
   intern/MOD_gpencil_legacy_build.c
   intern/MOD_gpencil_legacy_color.c
