--- a/source/blender/gpencil_modifiers_legacy/CMakeLists.txt
+++ b/source/blender/gpencil_modifiers_legacy/CMakeLists.txt
@@ -30,7 +30,7 @@ set(SRC
   intern/MOD_gpencil_legacy_armature.cc
   intern/MOD_gpencil_legacy_array.cc
   intern/MOD_gpencil_legacy_build.cc
-  intern/MOD_gpencil_legacy_color.c
+  intern/MOD_gpencil_legacy_color.cc
   intern/MOD_gpencil_legacy_dash.c
   intern/MOD_gpencil_legacy_envelope.c
   intern/MOD_gpencil_legacy_hook.c
