--- a/source/blender/gpencil_modifiers_legacy/CMakeLists.txt
+++ b/source/blender/gpencil_modifiers_legacy/CMakeLists.txt
@@ -39,7 +39,7 @@ set(SRC
   intern/MOD_gpencil_legacy_lineart.cc
   intern/MOD_gpencil_legacy_mirror.cc
   intern/MOD_gpencil_legacy_multiply.cc
-  intern/MOD_gpencil_legacy_noise.c
+  intern/MOD_gpencil_legacy_noise.cc
   intern/MOD_gpencil_legacy_offset.c
   intern/MOD_gpencil_legacy_opacity.c
   intern/MOD_gpencil_legacy_outline.c
