--- a/source/blender/gpencil_modifiers_legacy/CMakeLists.txt
+++ b/source/blender/gpencil_modifiers_legacy/CMakeLists.txt
@@ -40,7 +40,7 @@ set(SRC
   intern/MOD_gpencil_legacy_mirror.cc
   intern/MOD_gpencil_legacy_multiply.cc
   intern/MOD_gpencil_legacy_noise.cc
-  intern/MOD_gpencil_legacy_offset.c
+  intern/MOD_gpencil_legacy_offset.cc
   intern/MOD_gpencil_legacy_opacity.c
   intern/MOD_gpencil_legacy_outline.c
   intern/MOD_gpencil_legacy_shrinkwrap.c
