move MOD_gpencil_legacy_outline.c

--- a/source/blender/gpencil_modifiers_legacy/CMakeLists.txt
+++ b/source/blender/gpencil_modifiers_legacy/CMakeLists.txt
@@ -42,7 +42,7 @@ set(SRC
   intern/MOD_gpencil_legacy_noise.cc
   intern/MOD_gpencil_legacy_offset.cc
   intern/MOD_gpencil_legacy_opacity.cc
-  intern/MOD_gpencil_legacy_outline.c
+  intern/MOD_gpencil_legacy_outline.cc
   intern/MOD_gpencil_legacy_shrinkwrap.c
   intern/MOD_gpencil_legacy_simplify.c
   intern/MOD_gpencil_legacy_smooth.c
