--- a/source/blender/gpencil_modifiers_legacy/CMakeLists.txt
+++ b/source/blender/gpencil_modifiers_legacy/CMakeLists.txt
@@ -44,7 +44,7 @@ set(SRC
   intern/MOD_gpencil_legacy_opacity.cc
   intern/MOD_gpencil_legacy_outline.cc
   intern/MOD_gpencil_legacy_shrinkwrap.cc
-  intern/MOD_gpencil_legacy_simplify.c
+  intern/MOD_gpencil_legacy_simplify.cc
   intern/MOD_gpencil_legacy_smooth.c
   intern/MOD_gpencil_legacy_subdiv.c
   intern/MOD_gpencil_legacy_texture.c
