--- a/source/blender/gpencil_modifiers_legacy/CMakeLists.txt
+++ b/source/blender/gpencil_modifiers_legacy/CMakeLists.txt
@@ -46,7 +46,7 @@ set(SRC
   intern/MOD_gpencil_legacy_shrinkwrap.cc
   intern/MOD_gpencil_legacy_simplify.cc
   intern/MOD_gpencil_legacy_smooth.cc
-  intern/MOD_gpencil_legacy_subdiv.c
+  intern/MOD_gpencil_legacy_subdiv.cc
   intern/MOD_gpencil_legacy_texture.c
   intern/MOD_gpencil_legacy_thick.c
   intern/MOD_gpencil_legacy_time.c
