--- a/source/blender/gpencil_modifiers_legacy/CMakeLists.txt
+++ b/source/blender/gpencil_modifiers_legacy/CMakeLists.txt
@@ -51,7 +51,7 @@ set(SRC
   intern/MOD_gpencil_legacy_thick.cc
   intern/MOD_gpencil_legacy_time.cc
   intern/MOD_gpencil_legacy_tint.cc
-  intern/MOD_gpencil_legacy_util.c
+  intern/MOD_gpencil_legacy_util.cc
   intern/MOD_gpencil_legacy_weight_angle.c
   intern/MOD_gpencil_legacy_weight_proximity.c
 
