--- a/source/blender/gpencil_modifiers_legacy/CMakeLists.txt
+++ b/source/blender/gpencil_modifiers_legacy/CMakeLists.txt
@@ -64,7 +64,7 @@ set(SRC
   intern/lineart/lineart_chain.cc
   intern/lineart/lineart_cpu.cc
   intern/lineart/lineart_ops.cc
-  intern/lineart/lineart_shadow.c
+  intern/lineart/lineart_shadow.cc
   intern/lineart/lineart_util.c
 
   intern/lineart/MOD_lineart.h
