move lineart_util.c

--- a/source/blender/gpencil_modifiers_legacy/CMakeLists.txt
+++ b/source/blender/gpencil_modifiers_legacy/CMakeLists.txt
@@ -65,7 +65,7 @@ set(SRC
   intern/lineart/lineart_cpu.cc
   intern/lineart/lineart_ops.cc
   intern/lineart/lineart_shadow.cc
-  intern/lineart/lineart_util.c
+  intern/lineart/lineart_util.cc
 
   intern/lineart/MOD_lineart.h
   intern/lineart/lineart_intern.h
