--- a/source/blender/editors/gpencil_legacy/CMakeLists.txt
+++ b/source/blender/editors/gpencil_legacy/CMakeLists.txt
@@ -31,7 +31,7 @@ set(SRC
   gpencil_add_stroke.cc
   gpencil_armature.cc
   gpencil_bake_animation.cc
-  gpencil_convert.c
+  gpencil_convert.cc
   gpencil_data.c
   gpencil_edit.c
   gpencil_edit_curve.c
