--- a/source/blender/editors/gpencil_legacy/CMakeLists.txt
+++ b/source/blender/editors/gpencil_legacy/CMakeLists.txt
@@ -35,7 +35,7 @@ set(SRC
   gpencil_data.cc
   gpencil_edit.cc
   gpencil_edit_curve.cc
-  gpencil_fill.c
+  gpencil_fill.cc
   gpencil_interpolate.c
   gpencil_merge.c
   gpencil_mesh.cc
