move gpencil_ops_versioning.c

--- a/source/blender/editors/gpencil_legacy/CMakeLists.txt
+++ b/source/blender/editors/gpencil_legacy/CMakeLists.txt
@@ -40,7 +40,7 @@ set(SRC
   gpencil_merge.cc
   gpencil_mesh.cc
   gpencil_ops.c
-  gpencil_ops_versioning.c
+  gpencil_ops_versioning.cc
   gpencil_paint.c
   gpencil_primitive.c
   gpencil_sculpt_paint.c
