move gpencil_ops.c

--- a/source/blender/editors/gpencil_legacy/CMakeLists.txt
+++ b/source/blender/editors/gpencil_legacy/CMakeLists.txt
@@ -39,7 +39,7 @@ set(SRC
   gpencil_interpolate.cc
   gpencil_merge.cc
   gpencil_mesh.cc
-  gpencil_ops.c
+  gpencil_ops.cc
   gpencil_ops_versioning.cc
   gpencil_paint.c
   gpencil_primitive.c
