move gpencil_primitive.c

--- a/source/blender/editors/gpencil_legacy/CMakeLists.txt
+++ b/source/blender/editors/gpencil_legacy/CMakeLists.txt
@@ -42,7 +42,7 @@ set(SRC
   gpencil_ops.cc
   gpencil_ops_versioning.cc
   gpencil_paint.cc
-  gpencil_primitive.c
+  gpencil_primitive.cc
   gpencil_sculpt_paint.c
   gpencil_select.c
   gpencil_undo.cc
