move gpencil_sculpt_paint.c

--- a/source/blender/editors/gpencil_legacy/CMakeLists.txt
+++ b/source/blender/editors/gpencil_legacy/CMakeLists.txt
@@ -43,7 +43,7 @@ set(SRC
   gpencil_ops_versioning.cc
   gpencil_paint.cc
   gpencil_primitive.cc
-  gpencil_sculpt_paint.c
+  gpencil_sculpt_paint.cc
   gpencil_select.c
   gpencil_undo.cc
   gpencil_utils.c
