--- a/source/blender/editors/gpencil_legacy/CMakeLists.txt
+++ b/source/blender/editors/gpencil_legacy/CMakeLists.txt
@@ -48,7 +48,7 @@ set(SRC
   gpencil_undo.cc
   gpencil_utils.cc
   gpencil_uv.cc
-  gpencil_vertex_ops.c
+  gpencil_vertex_ops.cc
   gpencil_vertex_paint.c
   gpencil_weight_paint.c
 
