move eevee_cryptomatte.c

--- a/source/blender/draw/CMakeLists.txt
+++ b/source/blender/draw/CMakeLists.txt
@@ -108,7 +108,7 @@ set(SRC
   engines/image/image_engine.cc
   engines/image/image_shader.cc
   engines/eevee/eevee_bloom.cc
-  engines/eevee/eevee_cryptomatte.c
+  engines/eevee/eevee_cryptomatte.cc
   engines/eevee/eevee_data.c
   engines/eevee/eevee_depth_of_field.c
   engines/eevee/eevee_effects.c
