--- a/source/blender/draw/CMakeLists.txt
+++ b/source/blender/draw/CMakeLists.txt
@@ -111,7 +111,7 @@ set(SRC
   engines/eevee/eevee_cryptomatte.cc
   engines/eevee/eevee_data.cc
   engines/eevee/eevee_depth_of_field.cc
-  engines/eevee/eevee_effects.c
+  engines/eevee/eevee_effects.cc
   engines/eevee/eevee_engine.c
   engines/eevee/eevee_lightcache.c
   engines/eevee/eevee_lightprobes.c
