move eevee_lights.c

--- a/source/blender/draw/CMakeLists.txt
+++ b/source/blender/draw/CMakeLists.txt
@@ -115,7 +115,7 @@ set(SRC
   engines/eevee/eevee_engine.cc
   engines/eevee/eevee_lightcache.cc
   engines/eevee/eevee_lightprobes.cc
-  engines/eevee/eevee_lights.c
+  engines/eevee/eevee_lights.cc
   engines/eevee/eevee_lookdev.c
   engines/eevee/eevee_lut.c
   engines/eevee/eevee_lut_gen.c
