--- a/source/blender/draw/CMakeLists.txt
+++ b/source/blender/draw/CMakeLists.txt
@@ -116,7 +116,7 @@ set(SRC
   engines/eevee/eevee_lightcache.cc
   engines/eevee/eevee_lightprobes.cc
   engines/eevee/eevee_lights.cc
-  engines/eevee/eevee_lookdev.c
+  engines/eevee/eevee_lookdev.cc
   engines/eevee/eevee_lut.c
   engines/eevee/eevee_lut_gen.c
   engines/eevee/eevee_materials.c
