--- a/source/blender/draw/CMakeLists.txt
+++ b/source/blender/draw/CMakeLists.txt
@@ -118,7 +118,7 @@ set(SRC
   engines/eevee/eevee_lights.cc
   engines/eevee/eevee_lookdev.cc
   engines/eevee/eevee_lut.c
-  engines/eevee/eevee_lut_gen.c
+  engines/eevee/eevee_lut_gen.cc
   engines/eevee/eevee_materials.c
   engines/eevee/eevee_mist.c
   engines/eevee/eevee_motion_blur.c
