move eevee_materials.c

--- a/source/blender/draw/CMakeLists.txt
+++ b/source/blender/draw/CMakeLists.txt
@@ -119,7 +119,7 @@ set(SRC
   engines/eevee/eevee_lookdev.cc
   engines/eevee/eevee_lut.cc
   engines/eevee/eevee_lut_gen.cc
-  engines/eevee/eevee_materials.c
+  engines/eevee/eevee_materials.cc
   engines/eevee/eevee_mist.c
   engines/eevee/eevee_motion_blur.c
   engines/eevee/eevee_occlusion.c
