move eevee_occlusion.c

--- a/source/blender/draw/CMakeLists.txt
+++ b/source/blender/draw/CMakeLists.txt
@@ -122,7 +122,7 @@ set(SRC
   engines/eevee/eevee_materials.cc
   engines/eevee/eevee_mist.cc
   engines/eevee/eevee_motion_blur.cc
-  engines/eevee/eevee_occlusion.c
+  engines/eevee/eevee_occlusion.cc
   engines/eevee/eevee_render.c
   engines/eevee/eevee_renderpasses.c
   engines/eevee/eevee_sampling.c
