--- a/source/blender/draw/CMakeLists.txt
+++ b/source/blender/draw/CMakeLists.txt
@@ -130,7 +130,7 @@ set(SRC
   engines/eevee/eevee_shaders.cc
   engines/eevee/eevee_shaders_extra.cc
   engines/eevee/eevee_shadows.c
-  engines/eevee/eevee_shadows_cascade.c
+  engines/eevee/eevee_shadows_cascade.cc
   engines/eevee/eevee_shadows_cube.c
   engines/eevee/eevee_subsurface.c
   engines/eevee/eevee_temporal_sampling.c
