--- a/source/blender/draw/CMakeLists.txt
+++ b/source/blender/draw/CMakeLists.txt
@@ -134,7 +134,7 @@ set(SRC
   engines/eevee/eevee_shadows_cube.cc
   engines/eevee/eevee_subsurface.cc
   engines/eevee/eevee_temporal_sampling.cc
-  engines/eevee/eevee_volumes.c
+  engines/eevee/eevee_volumes.cc
   engines/eevee_next/eevee_ambient_occlusion.cc
   engines/eevee_next/eevee_camera.cc
   engines/eevee_next/eevee_cryptomatte.cc
