--- a/source/blender/draw/CMakeLists.txt
+++ b/source/blender/draw/CMakeLists.txt
@@ -82,7 +82,7 @@ set(SRC
   intern/draw_debug.cc
   intern/draw_fluid.cc
   intern/draw_hair.cc
-  intern/draw_instance_data.c
+  intern/draw_instance_data.cc
   intern/draw_manager.c
   intern/draw_manager.cc
   intern/draw_manager_data.cc
