move workbench_render.c

--- a/source/blender/draw/CMakeLists.txt
+++ b/source/blender/draw/CMakeLists.txt
@@ -176,7 +176,7 @@ set(SRC
   engines/workbench/workbench_materials_next.cc
   engines/workbench/workbench_mesh_passes.cc
   engines/workbench/workbench_opaque.cc
-  engines/workbench/workbench_render.c
+  engines/workbench/workbench_render.cc
   engines/workbench/workbench_resources.cc
   engines/workbench/workbench_shader.cc
   engines/workbench/workbench_shader_cache.cc
