move gpencil_draw_data.c

--- a/source/blender/draw/CMakeLists.txt
+++ b/source/blender/draw/CMakeLists.txt
@@ -189,7 +189,7 @@ set(SRC
   engines/external/external_engine.cc
   engines/gpencil/gpencil_antialiasing.cc
   engines/gpencil/gpencil_cache_utils.cc
-  engines/gpencil/gpencil_draw_data.c
+  engines/gpencil/gpencil_draw_data.cc
   engines/gpencil/gpencil_engine.c
   engines/gpencil/gpencil_engine.cc
   engines/gpencil/gpencil_render.c
