move gpencil_engine_c.c

--- a/source/blender/draw/CMakeLists.txt
+++ b/source/blender/draw/CMakeLists.txt
@@ -190,8 +190,8 @@ set(SRC
   engines/gpencil/gpencil_antialiasing.cc
   engines/gpencil/gpencil_cache_utils.cc
   engines/gpencil/gpencil_draw_data.cc
-  engines/gpencil/gpencil_engine.c
   engines/gpencil/gpencil_engine.cc
+  engines/gpencil/gpencil_engine_c.cc
   engines/gpencil/gpencil_render.c
   engines/gpencil/gpencil_shader.c
   engines/gpencil/gpencil_shader.cc
