--- a/source/blender/draw/CMakeLists.txt
+++ b/source/blender/draw/CMakeLists.txt
@@ -195,7 +195,7 @@ set(SRC
   engines/gpencil/gpencil_render.cc
   engines/gpencil/gpencil_shader.c
   engines/gpencil/gpencil_shader.cc
-  engines/gpencil/gpencil_shader_fx.c
+  engines/gpencil/gpencil_shader_fx.cc
   engines/select/select_draw_utils.c
   engines/select/select_engine.c
   engines/select/select_instance.cc
