move gpu_batch_utils.c

--- a/source/blender/gpu/CMakeLists.txt
+++ b/source/blender/gpu/CMakeLists.txt
@@ -48,7 +48,7 @@ set(INC_SYS
 set(SRC
   intern/gpu_batch.cc
   intern/gpu_batch_presets.cc
-  intern/gpu_batch_utils.c
+  intern/gpu_batch_utils.cc
   intern/gpu_capabilities.cc
   intern/gpu_codegen.cc
   intern/gpu_compute.cc
