--- a/source/blender/gpu/CMakeLists.txt
+++ b/source/blender/gpu/CMakeLists.txt
@@ -59,7 +59,7 @@ set(SRC
   intern/gpu_immediate.cc
   intern/gpu_immediate_util.cc
   intern/gpu_index_buffer.cc
-  intern/gpu_init_exit.c
+  intern/gpu_init_exit.cc
   intern/gpu_material.c
   intern/gpu_matrix.cc
   intern/gpu_node_graph.cc
