--- a/source/blender/datatoc/CMakeLists.txt
+++ b/source/blender/datatoc/CMakeLists.txt
@@ -19,7 +19,7 @@ add_executable(datatoc ${SRC})
 if(NOT WITH_HEADLESS)
 
   set(SRC
-    datatoc_icon.c
+    datatoc_icon.cc
   )
   setup_platform_linker_flags(datatoc)
   if(WIN32)
