--- a/source/blender/render/CMakeLists.txt
+++ b/source/blender/render/CMakeLists.txt
@@ -38,7 +38,7 @@ set(SRC
   intern/render_types.cc
   intern/texture_image.cc
   intern/texture_margin.cc
-  intern/texture_pointdensity.c
+  intern/texture_pointdensity.cc
   intern/texture_procedural.cc
   intern/zbuf.c
 
